Claimsum calculation now included in a modal. Fixed bug when canceling creation of new Ombud.

--- a/Sjuklöner/Sjuklöner.csproj
+++ b/Sjuklöner/Sjuklöner.csproj
@@ -206,9 +206,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201802201601399_init.cs" />
-    <Compile Include="Migrations\201802201601399_init.Designer.cs">
-      <DependentUpon>201802201601399_init.cs</DependentUpon>
+    <Compile Include="Migrations\201802221532564_init.cs" />
+    <Compile Include="Migrations\201802221532564_init.Designer.cs">
+      <DependentUpon>201802221532564_init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802230849380_addCareCompanyKeyToAssistantClass.cs" />
+    <Compile Include="Migrations\201802230849380_addCareCompanyKeyToAssistantClass.Designer.cs">
+      <DependentUpon>201802230849380_addCareCompanyKeyToAssistantClass.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -423,8 +427,11 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201802201601399_init.resx">
-      <DependentUpon>201802201601399_init.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201802221532564_init.resx">
+      <DependentUpon>201802221532564_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802230849380_addCareCompanyKeyToAssistantClass.resx">
+      <DependentUpon>201802230849380_addCareCompanyKeyToAssistantClass.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
