--- a/Sjuklöner/Sjuklöner.csproj
+++ b/Sjuklöner/Sjuklöner.csproj
@@ -210,6 +210,10 @@
     <Compile Include="Migrations\201802231236400_init.Designer.cs">
       <DependentUpon>201802231236400_init.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201802231329426_addRequiredToAssistantClass.cs" />
+    <Compile Include="Migrations\201802231329426_addRequiredToAssistantClass.Designer.cs">
+      <DependentUpon>201802231329426_addRequiredToAssistantClass.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Admin.cs" />
@@ -425,6 +429,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201802231236400_init.resx">
       <DependentUpon>201802231236400_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802231329426_addRequiredToAssistantClass.resx">
+      <DependentUpon>201802231329426_addRequiredToAssistantClass.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
