Finally got the database connection stuff rolling.

--- a/Sjuklöner/Web.config
+++ b/Sjuklöner/Web.config
@@ -22,6 +22,8 @@
     <add key="mailPassword" value="DemoDagen"/>
   </appSettings>
   <system.web>
+    <customErrors mode="Off" />
+    <trust level="Full"/>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
