Fixed the layout for Administrators, pushed the footer down to th bottom of the screen.

--- a/Sjuklöner/Web.config
+++ b/Sjuklöner/Web.config
@@ -18,13 +18,12 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-    <add key="mailAccount" value="ourrobotdemo@gmail.com"/>
-    <add key="mailPassword" value="DemoDagen"/>
+    <add key="mailAccount" value="saRobin"/>
+    <add key="mailPassword" value="B8xDvLzASPZo"/>
   </appSettings>
   <system.web>
     <customErrors mode="Off" />
     <trust level="Full"/>
-    <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <httpModules>
