Tinkered with publish settings, plus disabled mail sending.

--- a/Sjuklöner/Web.config
+++ b/Sjuklöner/Web.config
@@ -17,9 +17,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-
-    <add key="mailAccount" value="saRobin"/>
-    <add key="mailPassword" value="B8xDvLzASPZo"/>
+    <add key="SMTPServer" value="smtp.gmail.com"/>
+    <add key="mailAccount" value="ourrobotdem@gmail.com"/>
+    <add key="mailPassword" value="DemoDagen"/>
   </appSettings>
   <system.web>
     <customErrors mode="Off" />
