Fixed the email functionality, plus fixed (I think) the Web.Config transformaiton on Publish.

--- a/Sjuklöner/Web.CustomProfile1.config
+++ b/Sjuklöner/Web.CustomProfile1.config
@@ -15,9 +15,10 @@
     </connectionStrings>
   -->
   <appSettings>
-    <add key="SMTPServer" value="smtp.hbg.se" xdt:Transform="Replace" />
-    <add key="mailAccount" value="HBGADM\SARobin" xdt:Transform="Replace" />
-    <add key="mailPassword" value="B8xDvLzASPZo" xdt:Transform="Replace" />
+    <add key="SMTPServer" value="smtp.hbgstad.se" xdt:Transform="Replace" xdt:Locator="Match(key)"  />
+    <add key="mailAccount" value="HBGADM\SARobin" xdt:Transform="Replace" xdt:Locator="Match(key)"  />
+    <add key="mailPassword" value="B8xDvLzASPZo" xdt:Transform="Replace" xdt:Locator="Match(key)"  />
+    <add key="SMPTPort" xdt:Transform="Replace" xdt:Locator="Match(key)"  />
   </appSettings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
