--- a/Sjuklöner/Web.config
+++ b/Sjuklöner/Web.config
@@ -20,6 +20,7 @@
     <add key="SMTPServer" value="smtp.gmail.com"/>
     <add key="mailAccount" value="ourrobotdem@gmail.com"/>
     <add key="mailPassword" value="DemoDagen"/>
+    <add key="SMTPPort" value="587"/>
   </appSettings>
   <system.web>
     <customErrors mode="Off" />
