--- a/Sjuklöner/Sjuklöner.csproj
+++ b/Sjuklöner/Sjuklöner.csproj
@@ -240,6 +240,10 @@
     <Compile Include="Migrations\201803051001510_filepath.Designer.cs">
       <DependentUpon>201803051001510_filepath.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201803121748013_addFirstAssistanceDateAndLastAssistanceDateInClaim.cs" />
+    <Compile Include="Migrations\201803121748013_addFirstAssistanceDateAndLastAssistanceDateInClaim.Designer.cs">
+      <DependentUpon>201803121748013_addFirstAssistanceDateAndLastAssistanceDateInClaim.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Admin.cs" />
@@ -470,6 +474,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201803051001510_filepath.resx">
       <DependentUpon>201803051001510_filepath.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803121748013_addFirstAssistanceDateAndLastAssistanceDateInClaim.resx">
+      <DependentUpon>201803121748013_addFirstAssistanceDateAndLastAssistanceDateInClaim.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
