--- a/Sjuklöner/Web.CustomProfile1.config
+++ b/Sjuklöner/Web.CustomProfile1.config
@@ -18,7 +18,7 @@
     <add key="SMTPServer" value="smtp.hbgstad.se" xdt:Transform="Replace" xdt:Locator="Match(key)"  />
     <add key="mailAccount" value="HBGADM\SARobin" xdt:Transform="Replace" xdt:Locator="Match(key)"  />
     <add key="mailPassword" value="B8xDvLzASPZo" xdt:Transform="Replace" xdt:Locator="Match(key)"  />
-    <add key="SMPTPort" xdt:Transform="Replace" xdt:Locator="Match(key)"  />
+    <add key="SMPTPPort" xdt:Transform="Replace" xdt:Locator="Match(key)"  />
   </appSettings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
