Adjusted code in ClaimsController for handling date information about decision for personal assistance. Only dates with a vlid decision shall be included in model sum calculation. Added more code to admin of AdmOffs for admin role.

--- a/Sjuklöner/Sjuklöner.csproj
+++ b/Sjuklöner/Sjuklöner.csproj
@@ -453,6 +453,7 @@
     <Content Include="Views\Assistants\IndexAllCompanies.cshtml" />
     <Content Include="Views\Assistants\CreateAssistantCompany.cshtml" />
     <Content Include="Views\Assistants\EditAssistantCompany.cshtml" />
+    <Content Include="Views\Account\DetailsAdmOff.cshtml" />
     <None Include="Web.CustomProfile1.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
