--- a/Sjuklöner/Sjuklöner.csproj
+++ b/Sjuklöner/Sjuklöner.csproj
@@ -454,6 +454,8 @@
     <Content Include="Views\Assistants\CreateAssistantCompany.cshtml" />
     <Content Include="Views\Assistants\EditAssistantCompany.cshtml" />
     <Content Include="Views\Account\DetailsAdmOff.cshtml" />
+    <Content Include="Views\Account\DeleteAdmOff.cshtml" />
+    <Content Include="Views\Account\IndexAllOmbuds.cshtml" />
     <None Include="Web.CustomProfile1.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
