Hiding "Ta Bort" button in Index View for CareCompanies that is not allowed to be Removed.

--- a/Sjuklöner/Sjuklöner.csproj
+++ b/Sjuklöner/Sjuklöner.csproj
@@ -277,6 +277,7 @@
     <Compile Include="Viewmodels\CareCompanyCreateVM.cs" />
     <Compile Include="Viewmodels\CareCompanyDeleteVM.cs" />
     <Compile Include="Viewmodels\CareCompanyDetailsVM.cs" />
+    <Compile Include="Viewmodels\CareCompanyIndexVM.cs" />
     <Compile Include="Viewmodels\ClaimDetailsOmbudVM.cs" />
     <Compile Include="Viewmodels\AssistantCreateVM.cs" />
     <Compile Include="Viewmodels\OmbudDeleteVM.cs" />
