Work done on admin of Ombud for Admin role (not completed). Counters on number of claims etc shown on the first page for Admin role. Adjusted comment about calculated amounts in Create3 view according to customer's requirement.

--- a/Sjuklöner/Sjuklöner.csproj
+++ b/Sjuklöner/Sjuklöner.csproj
@@ -272,6 +272,7 @@
     <Compile Include="Startup.cs" />
     <Compile Include="Viewmodels\AssistantCompanyCreateVM.cs" />
     <Compile Include="Viewmodels\AssistantCompanyEditVM.cs" />
+    <Compile Include="Viewmodels\AdminIndexVM.cs" />
     <Compile Include="Viewmodels\AssistantEditVM.cs" />
     <Compile Include="Viewmodels\AssistantIndexAllCompaniesVM.cs" />
     <Compile Include="Viewmodels\CareCompanyCreateVM.cs" />
