--- a/Sjuklöner/Sjuklöner.csproj
+++ b/Sjuklöner/Sjuklöner.csproj
@@ -244,6 +244,10 @@
     <Compile Include="Migrations\201803121748013_addFirstAssistanceDateAndLastAssistanceDateInClaim.Designer.cs">
       <DependentUpon>201803121748013_addFirstAssistanceDateAndLastAssistanceDateInClaim.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804050728412_customerAddressOptionalAndClaimCalculationMaxEightHours.cs" />
+    <Compile Include="Migrations\201804050728412_customerAddressOptionalAndClaimCalculationMaxEightHours.Designer.cs">
+      <DependentUpon>201804050728412_customerAddressOptionalAndClaimCalculationMaxEightHours.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Admin.cs" />
@@ -494,6 +498,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201803121748013_addFirstAssistanceDateAndLastAssistanceDateInClaim.resx">
       <DependentUpon>201803121748013_addFirstAssistanceDateAndLastAssistanceDateInClaim.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804050728412_customerAddressOptionalAndClaimCalculationMaxEightHours.resx">
+      <DependentUpon>201804050728412_customerAddressOptionalAndClaimCalculationMaxEightHours.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
