Implemented Delete Ombud

--- a/Sjuklöner/Sjuklöner.csproj
+++ b/Sjuklöner/Sjuklöner.csproj
@@ -486,6 +486,7 @@
     <Content Include="Views\Account\DeleteAdmOff.cshtml" />
     <Content Include="Views\Account\IndexAllOmbuds.cshtml" />
     <Content Include="Views\Claims\IndexPageAdmin.cshtml" />
+    <Content Include="Views\Account\DeleteOmbud.cshtml" />
     <None Include="Web.CustomProfile1.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
