--- a/Sjuklöner/Web.config
+++ b/Sjuklöner/Web.config
@@ -30,6 +30,7 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    <httpRuntime maxRequestLength="16384" />
   </system.web>
   <system.webServer>
     <modules>
