Moved increased upload filesize to second web.config file.

--- a/Sjuklöner/Views/Web.config
+++ b/Sjuklöner/Views/Web.config
@@ -39,5 +39,6 @@
         <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
+    <httpRuntime maxRequestLength="16384" />
   </system.web>
 </configuration>
