Adjusted filneames för attachments. Started working on logic for admin to allow automatic transfer of claim to Procapita.

--- a/Sjuklöner/Web.config
+++ b/Sjuklöner/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,22 +9,21 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Sjuklöner-20171211025241.mdf;Initial Catalog=aspnet-Sjuklöner-20171211025241;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Sjuklöner-20171211025241.mdf;Initial Catalog=aspnet-Sjuklöner-20171211025241;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings file="..\..\AppSettingsSecrets.config">
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="SMTPServer" value="smtp.gmail.com"/>
-    <add key="mailAccount" value="ourrobotdem@gmail.com"/>
-    <add key="mailPassword" value="DemoDagen"/>
-    <add key="SMTPPort" value="587"/>
+    <add key="SMTPServer" value="smtp.gmail.com" />
+    <add key="mailAccount" value="ourrobotdem@gmail.com" />
+    <add key="mailPassword" value="DemoDagen" />
+    <add key="SMTPPort" value="587" />
   </appSettings>
   <system.web>
     <customErrors mode="Off" />
-    <trust level="Full"/>
+    <trust level="Full" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <httpModules>
@@ -43,19 +42,19 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
@@ -109,29 +108,16 @@
       </customBinding>
     </bindings>
     <client>
-      <endpoint address="https://appapi2.test.bankid.com/rp/v4"
-                binding="customBinding"
-                bindingConfiguration="RpServiceSoapBinding"
-                contract="BankIDService.RpServicePortType"
-                name="RpServiceSoapPort"
-                behaviorConfiguration="bankid" />
+      <endpoint address="https://appapi2.test.bankid.com/rp/v4" binding="customBinding" bindingConfiguration="RpServiceSoapBinding" contract="BankIDService.RpServicePortType" name="RpServiceSoapPort" behaviorConfiguration="bankid" />
     </client>
     <behaviors>
       <endpointBehaviors>
         <behavior name="bankid">
           <clientCredentials>
-            <clientCertificate findValue="FP Testcert 2"
-                               x509FindType="FindBySubjectName"
-                               storeLocation="CurrentUser"
-                               storeName="My" />
+            <clientCertificate findValue="FP Testcert 2" x509FindType="FindBySubjectName" storeLocation="CurrentUser" storeName="My" />
             <serviceCertificate>
-              <defaultCertificate findValue="Test BankID SSL Root CA v1 Test"
-                                  x509FindType="FindBySubjectName"
-                                  storeLocation="LocalMachine"
-                                  storeName="Root" />
-              <authentication certificateValidationMode="None"
-                              revocationMode="NoCheck"
-                              trustedStoreLocation="LocalMachine" />
+              <defaultCertificate findValue="Test BankID SSL Root CA v1 Test" x509FindType="FindBySubjectName" storeLocation="LocalMachine" storeName="Root" />
+              <authentication certificateValidationMode="None" revocationMode="NoCheck" trustedStoreLocation="LocalMachine" />
             </serviceCertificate>
           </clientCredentials>
         </behavior>
